fixed the Hake issue

--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -41,7 +41,7 @@ A summary of total removals are provided in @tbl-all_removals and @fig-catch.
 
 Recent commercial landings (2017-2024) were obtained from [PacFIN](www.pacfin.psmfc.org) for California, Oregon and Washington. As the previous assessment, for the period from 2016 through 2023, updated West Coast Groundfish Observer Program (WCGOP) discard estimates were added to PacFIN landings by adding the annual dead discard mortality estimates for the commercial sector in the Groundish Expanded Mortality Multi-year (GEMM) recorded discards to obtain the total catch of Yelloweye Rockfish within commercial fleets. 
 
-Bycatch for the At-Sea Pacific Hake fleet (ASHOP) was updated from 2017 through 2024 and included in the trawl fleets for California and Oregon/Washington. 
+Bycatch for the At-Sea Pacific Hake fleet (A-SHOP) was updated from 2017 through 2024.
 
 Recreational removals from [RecFIN](www.recfin.org) were updated for California, Oregon and Washington from 2017 - 2024. RecFIN removals include an estimate of discard mortality and represent total estimated removals. Updated historical recreational removals for Oregon from 1979 through 2000 were provided by Oregon Department of Fish and Wildlife (ODFW,[@Whitman_2024]). Washington Department of Fish and Wildlife (WDFW) provided updated historical recreational removals (1967-1989) and WDFW Ocean Sampling Program (OSP) estimates (1990-2001). The historical recreational removals for 1971, 1974, and 1979 were not available and were filled in as the average of the two preceding and two following years. Historical data were filtered to marine catch areas 1-4. For OSP catch estimates, data included marine catch areas 1-4, up to the Bonilla-Tatoosh line. WDFW also provided updated catch estimates for 2002-2004, which did not include discard mortality. To adjust for this, we multiplied the average mortality rate from the following five years (2005-2009) by the total discards to calculate total mortality for those years.  
 
