(Almost) finished the clean up edits to 03_data
added some tables but didn't include them in 002 load tables yet; incorporated Kiva's edits through end of section, fixed some ref's; still need two tables for FI comps

--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2358,11 +2358,12 @@ pages = "740~p",
   pages = {1297--1310}
 }
 
-@article{keller2017northwest,
+@techreport{keller2017northwest,
   title={The northwest fisheries science Center's West coast Groundfish bottom trawl survey: History, design, and description},
   author={Keller, A. A and Wallace, J. R. and Methot, R. D.},
+  type = {NOAA Technical Memorandum},
+  number = {NMFS-NWFSC-136},
   year={2017},
-  journal={U.S. Department of Commerce, NOAA Technical Memorandum NMFS-NWFSC-136},
   doi={10.7289/V5/TM-NWFSC-136}
 }
 
