--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -85,32 +85,31 @@ Fleet 7. Washington Recreational
 
 Two fishery-dependent indices of abundance were updated with new data and up-to-date methodology. These are detailed below. Otherwise, indices of abundances are unchanged from the previous assessment; please refer to the most recent benchmark assessment [@gertseva_stock_2017] for additional information. 
 
-#### Oregon Onboard Observer CPUE, 2001 – 2024 - **ALI CLEAN UP START HERE ... **
+#### Oregon Onboard Observer CPUE, 2001 – 2024 - 
 
 The Oregon Onboard Observer (now Ocean Recreational Fisheries Survey, or ORFS) index was updated from the previous Yelloweye Rockfish assessment, and updated drift-level catch-per-unit-effort data was obtained from ODFW through the end of 2024. The database contains information on catch by species (number of retained and released fish), effort (angler hours), sample depth, and bag limits and other relevant regulations [@monk_documentation_2013].  
 
-The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include drifts without data needed for CPUE information, long drifts (below 95th quantile), drifts in deeper waters (less than 64fm, 99th quantile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fm buffer). Additionally, years with extreme low sample sizes (<50) were excluded. Finally, drifts onboard charters from Port Orford were removed due to small sample size. The final filtered dataset included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish. 
+The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include drifts without data needed for CPUE information, long drifts (above 95th percentile), drifts in deeper waters (more than 64fm, 99th percentile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fm buffer). Additionally, years with extremely low sample sizes (<50) were excluded. Finally, drifts on charters from Port Orford were removed due to small sample sizes. The final filtered dataset included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish [@tbl-yelloweye_percent_pos_ORFS]. 
 
-Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using sdmTMB (version 0.6.0) to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC (**Table “model selection”**). Acceptable diagnostics for the model were achieved (@fig-orfs_qqplot). The index of abundance in shown in @fig-ORFS_index and **Table XXXX**. A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed (@ORFS_comp). The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013).
+Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using sdmTMB (version 0.6.0; @Anderson_2024_SRP) to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC [@tbl-yelloweye_model_selection_ORFS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in sdmTMB (@fig-orfs_qqplot). The index of abundance is shown in @fig-ORFS_index. A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed [@fig-ORFS_comp]. The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013) relative to the index from 2017.
 
 #### Oregon ORBS Dockside (release only) CPUE, 2004-2024
 
 The Ocean Recreational Boat Survey (ORBS) dockside index for Oregon was updated for this assessment. CPUE, expressed in terms of fish per angler-hour, was calculated by multiplying the number of anglers and the total trip time, minus the boat type-specific travel time. The database contains information on released fish by species (number of angler-reported released fish), effort (angler hours), sample location (port where data were collected), date, bag limits and other relevant regulations, boat type (charter or private), and trip type (e.g., bottom associated fish). 
 
-The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to ORBS trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of Yelloweye Rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. One, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips (**TABLE “percent_pos.csv”**) from 2004 – 2024 with an overall encounter rate of 7.4%.
+The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to ORBS trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of Yelloweye Rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. First, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips from 2004 – 2024 with an overall encounter rate of 7.4% [@tbl-yelloweye_percent_pos_ORBS].
 
-Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 ORBS index, apart from the open depths of the fishery. The final model in 2017 included boat type, port and year. Negative binomial models were fit in sdmTMB (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series (**TABLE “model_selection.csv”**). Acceptable diagnostics for the model were achieved (@fig-orbs_qq). The index of abundance in shown in @fig-ORBS_index and **Table XXXX**. ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for PFMC groundfish assessments (sdmTMB). To bridge this change, the 2017 model index structure was applied to the current dataset using sdmTMB and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two sdmTMB indices; however, this appears to be largely driven by the updated modeling approach.
+Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 ORBS index, apart from the open depths of the fishery. The final model in 2017 included boat type, port and year. Negative binomial models were fit in sdmTMB (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series [@tbl-yelloweye_model_selection_ORBS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in sdmTMB.(@fig-orbs_qq). The index of abundance in shown in @fig-ORBS_index. ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for PFMC groundfish assessments (sdmTMB, version 0.6.0; @Anderson_2024_SRP). To bridge this change, the 2017 model index structure was applied to the current dataset using sdmTMB and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two sdmTMB indices; however, this appears to be largely driven by the updated modeling approach.
 
 ## Fishery-Independent Data
 
-Two sources of fishery-independent data were updated. These include the NWFSC West Coast Bottom Trawl Survey and the IPHC Longline survey. 
+Two sources of fishery-independent data were updated: the West Coast Groundfish Bottom Trawl Survey and the IPHC Longline survey. 
 
-### NWFSC West Coast Bottom Trawl Survey (WCGBTS)
+### West Coast Bottom Trawl Survey (WCGBTS)
 
-The WCGBTS survey methods are most recently described in detail in @keller2017northwest.
-Geostatistical models of biomass density were fit to survey data from the WCGBTS using \gls{tmb} [@kristensen_tmb:_2016] via the \gls{sdmtmb} R package [@Anderson_2024_SRP] as configured within the \gls{indexwc} R package [@Johnson_indexwc]. Code to reproduce the analysis is available [online](https://github.com/pfmc-assessments/indexwc). These models can account for latent spatial factors with a constant spatial Gaussian random field and spatiotemporal deviations to evolve as a random walk Guassian random field [@thorson_geostatistical_2015]. Delta-gamma and delta-lognormal distributions were investigated. Results are only shown for the model that led to the best model diagnostics, e.g., similar distributions of theoretical normal quantiles and model quantiles (@fig-wcgbts_qq), high precision, lack of extreme predictions, and low \gls{aic}. Estimates of biomass from this best model were predicted using a grid based on available survey locations.
+The WCGBTS survey methods are most recently described in detail in @keller2017northwest. Geostatistical models of biomass density were fit to survey data from the WCGBTS using \gls{tmb} [@kristensen_tmb:_2016] via the \gls{sdmtmb} R package [@Anderson_2024_SRP] as configured within the [indexwc](https://github.com/pfmc-assessments/indexwc) R package [@Johnson_indexwc]. These models can account for latent spatial factors with a constant spatial Gaussian random field and spatiotemporal deviations to evolve as a random walk Guassian random field [@thorson_geostatistical_2015]. Delta-gamma and delta-lognormal distributions were investigated. Results are only shown for the model that led to the best model diagnostics, defined as similar distributions of theoretical normal quantiles and model quantiles (@fig-wcgbts_qq), high precision, lack of extreme predictions, and low \gls{aic}. Estimates of biomass from this best model were predicted using a grid based on available survey locations.
 
-The final model used a delta model with a lognormal distribution for the catch-rate component. A logit-link was used for encounter probability and a log-link for positive catch rates. The response variable was catch (mt) with an offset of area (km^2^) to account for differences in effort. Fixed effects were estimated for each year and pass. The index was estimated for the area north of $42^{\circ}10'$ (Oregon and Washington) to be consistent with the previous assessment. The data were truncated to depths less than 325 m prior to modeling given that there were zero positive encounters in depths deeper than 325 m. The prediction grid was also truncated to only include available survey locations in depths between 55--325 m to limit extrapolating beyond the data and edge effects. Spatial variation was included in the encounter probability and the positive catch rate model. Spatial variation was approximated using 200 knots, where more knots led to non-estimable standard errors because the positive encounters are too sparse to support the dense spatiotemporal structure. Anisotropy was not estimated.
+The final model used a delta model with a lognormal distribution for the catch-rate component. A logit-link was used for encounter probability and a log-link for positive catch rates. The response variable was catch (mt) with an offset of area swept (km^2^) to account for differences in effort. Fixed effects were estimated for each year and pass. The index was estimated for the area north of $42^{\circ}10'$ (Oregon and Washington) to be consistent with the previous assessment. The data were truncated to depths shallower than 325 m prior to modeling given that there were zero positive encounters in depths deeper than 325 m. The prediction grid was also truncated to only include available survey locations in depths between 55--325 m to limit extrapolating beyond the data and edge effects. Spatial variation was included in the encounter probability and the positive catch rate model. Spatial variation was approximated using 200 knots, where more knots led to non-estimable standard errors because the positive encounters are too sparse to support the dense spatiotemporal structure. Anisotropy was not estimated.
 
 The biomass estimates produced for this assessment using sdmTMB are comparable to the biomass estimates produced in the previous benchmark assessment (@fig-wcgbtsindexcomparison). The index is relatively flat with a peak in 2014, but variation is high throughout the time series (@fig-wcgbtsindex).
 
@@ -118,16 +117,16 @@ The biomass estimates produced for this assessment using sdmTMB are comparable t
 
 The IPHC has conducted an annual longline survey for Pacific halibut off the coast of Oregon and Washington (IPHC area “2A”) since 1997 (no surveys were performed in 1998 or 2000). Beginning in 1999, this has been a fixed station design, with roughly 1,800 hooks deployed at each of 84 locations. Before 1999, station locations were not fixed, and, therefore, those years are not used in the index. Rockfish bycatch, mainly yelloweye, was recorded during this survey, although values for 1999 and 2001 are estimates based on subsampling the first 20 hooks of each 100-hook skate. The gear used to conduct this survey, while designed specifically to efficiently sample Pacific halibut, is similar to that used in some earlier line fisheries that targeted adult Yelloweye Rockfish. Some variability in exact sampling location is unavoidable, and leeway is given in the IPHC methods to center the set on the target coordinates but to allow wind and currents to dictate the actual direction in which the gear is deployed. This can result in different habitats accessed at each fixed location among years. The number of skates used can also differ from year to year; skates hauled (i.e., 100 hooks/skate) are thus used as the unit of effort for all years. This has been the standard effort used in past Yelloweye Rockfish stock assessments. 
 
-New to this assessment is the consideration of eight additional survey stations (1527 to 1534) conducted in a collaborative effort between IPHC and WDFW from 2007-2009 then from 2013-2019 and 2021-2023. These stations are arranged around IPHC station 1082 (one of the more notable stations to encounter Yelloweye Rockfish). Only the summer months are considered here to match the time of year sampled by the IPHC survey. Survey sets at the WDFW stations used 3 skates with 100 hooks each for most years, except for 2021 - 2023, where a total of 4 skates were used. Like the IPHC survey, effort was standardized to 100 hooks/skate. These stations were integrated into the IPHC stations when calculating the index of abundance. The full survey used in this assessment combined all stations in Oregon and Washington into a single index, fitting the area of the stock, instead of using state-specific indices. Data were first filtered to remove all depths with few or no encounters, and then we excluded stations that rarely encountered yelloweye (averaging less than one encounter a year). This left a total of 11 stations for analysis. Both filtering levels increased the percentage of encounters from an initial 11% to 80%. 
+New to this assessment is the consideration of eight additional survey stations (1527 to 1534) conducted in a collaborative effort between IPHC and WDFW from 2007-2009, 2013-2019 and 2021-2023. These stations are arranged around IPHC station 1082 (one of the more notable stations to encounter Yelloweye Rockfish). Only the summer months are considered here to match the time of year sampled by the IPHC survey. Survey sets at the WDFW stations used three skates with 100 hooks each for most years, except for 2021 - 2023, where a total of four skates were used. Like the IPHC survey, effort was standardized to 100 hooks/skate. These stations were integrated into the IPHC stations when calculating the index of abundance. The full survey used in this assessment combined all stations in Oregon and Washington into a single index. Data were first filtered to remove all depths with few or no encounters, and then we excluded stations that rarely encountered Yelloweye Rockfish (averaging less than one encounter a year). This left a total of 11 stations for analysis. Both filtering levels increased the percentage of encounters from an initial 11% to 80%. 
 
-A log-normal generalized linear model with a log link in the “sdmTMB” R package was used to standardize the CPUE. Model selection using the Akaike Information Criteria for small samples (AICc) was conducted to select which variables were included in the model. The final model included year, station, and depth as explanatory variables. Diagnostic tools to ensure the model fit was satisfactory included checking whether the hessian matrix is positive definite, the presence of extreme eigenvalues, and if the non-linear minimizer suggests convergence. These diagnostics were conducted with the “sanity( )” function in the sdmTMB package. The updated index is shown in @fig-IPHC_index and compared to the index used in the 2017 index in @fig-IPHC_comparison. 
+A log-normal generalized linear model with a log link in the sdmTMB R package [@Anderson_2024_SRP] was used to standardize the CPUE. Model selection using the Akaike Information Criteria for small samples (AICc) was conducted to select which variables were included in the model. The final model included year, station, and depth as explanatory variables. Diagnostic tools to ensure the model fit was satisfactory included checking whether the hessian matrix is positive definite, the presence of extreme eigenvalues, and if the non-linear minimizer suggests convergence. These diagnostics were conducted with the sanity function in the sdmTMB package. The updated index is compared to the index used in 2017 in @fig-IPHC_comparison. 
 
 ### Fishery-Independent Length and Age Compositions
 
-Updated length and age composition data were available for the two updated fishery-independent surveys. Compositional data from 2017 through 2024 were updated for NWFSC West Coast Groundfish Bottom Trawl Survey were obtained using functions from the **{nwfscSurvey} R package**. The IPHC survey data were provided by WDFW. 
+Updated length and age composition data were available for the two updated fishery-independent surveys. Compositional data from 2017 through 2024 were updated for WCGBTS were obtained using functions from the [indexwc](https://github.com/pfmc-assessments/indexwc) R package [@Johnson_indexwc]. The IPHC survey compositional data were provided by WDFW. 
 
 A summary of sampling efforts (number of hauls and number of individual fish) in all surveys is provided in **Table X** and **Table X**. Updated year-specific length frequency distributions generated for each survey are shown in @fig-NWFSC_lencomps and @fig-IPHC_lencomps, respectively. Updated year-specific CAAL frequencies for each survey are shown in @fig-NWFSC_agecomps1 and @fig-NWFSC_agecomps2 for the WCGBTS and @fig-IPHC_agecomps1 and @fig-IPHC_agecomps2. 
 
 ## Biological Parameters and Data
 
-The approach to natural mortality, maturity and fecundity were unchanged from the previous assessment [@gertseva_stock_2017]. Several biological parameters used in the assessment were estimated outside the model or obtained from literature. Their values were treated in the model as fixed, and therefore uncertainty reported for the stock assessment results does not include any uncertainty in these quantities (however, some were investigated via sensitivity analyses described later in this report). The parameters for the length-weight relationship were updated to include the most recent data from 2017 - 2024. The parameters derived from this analysis were as follows: ⍺ = 7.183309·10-6, and β  = 3.244801 (@fig-LWrel). Aging error matrices were unchanged but the designated matrix was corrected in some years for Oregon recreational ages. All fish from 1979-2002 were aged by WDFW (ageing error 1) and fish from 2009-2016 were aged by the NWFSC (ageing error 2).
+The approach to natural mortality, maturity and fecundity were unchanged from the previous assessment [@gertseva_stock_2017]. All of these biological parameters used in the assessment were estimated outside the model or obtained from literature. Therefore, uncertainty reported for the stock assessment results does not include any uncertainty in these quantities (however, some were investigated via sensitivity analyses described later in this report). The parameters for the length-weight relationship were updated to include the most recent data from 2017 - 2024. The parameters derived from this analysis were as follows: ⍺ = 7.183309·10-6, and β  = 3.244801 (@fig-LWrel). Aging error matrices were unchanged.
